--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,14 @@
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+@import "vendors/responsive";
 @import "variables";
+
 @import "layout";
 @import "button";
 @import "form";
 @import "mixins/menu.scss";
 @import "mixins/hover";
+@import "partials/main";
+
 .socials {
   a {
     color: white;
@@ -32,169 +36,4 @@
 
 .food-card {
   width: 250px;
-}
-
-.header {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-gap: 10px;
-  &__content {
-    h1 {
-      font-family: $font-title;
-      font-weight: 900;
-      font-size: 4.1rem;
-      line-height: 4.2rem;
-    }
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .content {
-      padding: 15px;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-
-      max-width: 600px;
-      // input
-      &__input {
-        display: grid;
-        grid-gap: 10px;
-        grid-template-columns: 70% 30%;
-        grid-row: repeat(2, 1fr);
-        p {
-          grid-column: 1 / 2;
-          color: black;
-          font-weight: 700;
-        }
-        input {
-          grid-row: 2 / 2;
-          width: 80%;
-        }
-        button {
-          grid-row: 2 /2;
-        }
-      }
-    }
-  }
-  &__media {
-    background: $primary-color;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .video {
-      width: 500px;
-      display: flex;
-      height: 350px;
-      position: relative;
-      overflow: hidden;
-      .overlay {
-        position: absolute;
-        z-index: 4;
-        width: 100%;
-        height: 100%;
-        background: rgba($color: $black, $alpha: 0.6);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.8s ease;
-        &.hide {
-          bottom: -500px;
-        }
-        button {
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          transition: 1.2 ease-in-out;
-          &:hover {
-            transform: scale(1.08);
-          }
-          &:active {
-            transform: scale(0.7);
-          }
-          &.primary {
-            background: $black;
-            color: $white;
-            &:active {
-              background: rgba($black, $alpha: 0.8);
-            }
-          }
-        }
-      }
-      video {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        z-index: 1;
-      }
-    }
-  }
-}
-
-.nav {
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  width: 100vw;
-  padding: 35px 100px;
-  transition: 0.2s ease;
-  @include hoverMenu($black, $black);
-  &.scroll {
-    background-color: white;
-    padding: 30px 100px;
-    .logo {
-      width: 120px;
-    }
-  }
-  .logo {
-    position: relative;
-    width: 150px;
-    img {
-      position: absolute;
-      top: -10px;
-      width: 100%;
-    }
-  }
-  &__menu {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    li {
-      list-style: none;
-      a {
-        color: $black;
-        text-decoration: none;
-      }
-    }
-  }
-}
-
-.social {
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  top: 50%;
-  left: 0px;
-  padding: 20px 0;
-  background-color: white;
-  a {
-    margin: 5px;
-    color: $black;
-    padding: 5px;
-    i {
-      font-size: 2rem;
-      &:hover {
-        transform: scale(1.08);
-      }
-      &:active {
-        transform: scale(0.7);
-      }
-    }
-  }
 }
