chore: deploy version 1.0.1

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -84,6 +84,7 @@
         height: 350px;
         position: relative;
         overflow: hidden;
+        z-index: 5;
         @include layout-bp(lt-md) {
           width: 350px;
           height: 350px;
