--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -16,4 +16,7 @@
       background: rgba($black, $alpha: 0.8);
     }
   }
+  // &:disabled {
+  //   background-color: rgba($black, $alpha: 0.7);
+  // }
 }
