--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -1,7 +1,8 @@
 .btn {
-  padding: 10px 15px;
-  border-radius: 3px;
+  padding: 20px 15px;
+  border-radius: 12px;
   cursor: pointer;
+  font-size: 16px;
   transition: 0.2s ease;
   &:hover {
     transform: scale(1.08);
