--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -17,7 +17,8 @@
         font-family: $font-title;
         font-weight: 900;
         font-size: 4.1rem;
-        line-height: 4.2rem;
+        line-height: 5.5rem;
+        font-family: "Artico expanded", sans-serif;
         @include layout-bp(lt-lg) {
           font-size: 3rem;
           line-height: 3.2rem;
@@ -26,6 +27,10 @@
           font-size: 2.5rem;
           line-height: 2.6rem;
         }
+        span {
+          font-weight: 300;
+        }
+        font-weight: 600;
       }
 
       display: flex;
@@ -47,6 +52,7 @@
           }
         }
         &__input {
+          margin-top: 3rem;
           display: grid;
           grid-gap: 10px;
           grid-template-columns: 70% 30%;
@@ -79,9 +85,9 @@
         }
       }
       .video {
-        width: 500px;
+        width: 600px;
         display: flex;
-        height: 350px;
+        height: 500px;
         position: relative;
         overflow: hidden;
         z-index: 5;
