chore: deploy version 1.0.1

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 // fonts
 
-$font-title: "Lato", sans-serif;
+$font-title: "Artico expanded", sans-serif;
+$font-body: "Artico expanded", sans-serif;
 
 // colors
 
