--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,16 +10,7 @@
 @import "mixins/menu.scss";
 @import "mixins/hover";
 @import "partials/main";
-@font-face {
-  font-family: "Artico expanded";
-  font-weight: 300;
-  src: url("assets/fonts/Artico-Expanded-Light.otf") format("opentype");
-}
-@font-face {
-  font-family: "Artico expanded";
-  font-weight: 600;
-  src: url("assets/fonts/Artico-Expanded-Bold.otf") format("opentype");
-}
+@import "vendors/fonts";
 .socials {
   a {
     color: white;
